modificacion en el html, se agrego un form

--- a/Index.html
+++ b/Index.html
@@ -71,6 +71,19 @@
             </tr>
         </tbody>
     </table>
+    <form action="">
+        <fieldset>
+            <legend>Contáctame</legend>
+            <label for="name">Nombre</label>
+            <input type="text" id="name" name="name" required>
+            <br><br>
+            <label for="Telefono">Telefono</label>
+            <input type="tel" id="Telefono" name="Telefono" required>
+            <br><br>
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Limpiar">
+        </fieldset>
+    </form>
     <a href="https://campus.talentotechcaribe.co/mod/lesson/view.php?id=2980" target="_blank">Perfil Mentor</a>
     <br><br><a href="https://crm.etraining.co/pages/paids/form-user-paid" target="_blank">Acceder a etraining</a>
 </body>
